<resources>
    <string name="app_name">快查</string>
    <string name="record">记录</string>
    <string name="search">查询</string>
    <string name="post">邮递</string>
    <string name="sure">确定</string>
    <string name="saoma">扫码</string>
    <string name="location">点击定位当前位置</string>
    <string name="target">请输入目的位置</string>
    <string name="company">请选择快递公司</string>
    <string name="number">请输入订单号</string>
    <string name="name">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="password2">请确认密码</string>
    <string name="samepwd">密码输入不一致</string>
    <string name="yanzhengma">请输入验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="registersuccess">注册成功</string>
    <string name="global_cancel">取消</string>
    <string name="find">找回</string>
    <string name="postcompany">快递公司</string>
    <string name="noon">  </string>
    <string name="savepic">截屏保存</string>
    <string name="savepicing">截屏保存中……</string>
    <string name="errorcode">200</string>
    <string name="sorry">对不起，未获取到公司信息</string>
    <string name="sorry2">公司信息获取失败</string>
    <string name="sorry3">对不起，没有查到信息</string>
    <string name="detial">详情</string>
    <string name="nobody">查无此用户</string>
    <string name="findpwd">找回密码</string>
    <string name="yzmerror">验证码输入错误</string>
    <string name="nouser">该用户不存在</string>
    <string name="haduser">该用户已存在</string>
    <string name="unfinish">未完成</string>
    <string name="finish">已完成</string>
    <string name="checknet">请检查您的网络连接</string>
    <string name="threeg">当前网络是3G，为了保证您的查询畅通，建议使用WIFI</string>
    <string name="searching">正在查询……</string>
    <string name="noinfo">对不起，没有查到信息</string>
    <string name="searchfail">查询失败，请检查联网或输入</string>
    <string name="delete">删除</string>
    <string name="nodata">空空如也</string>
    <string name="saveok">保存成功</string>
    <string name="moreknow">推荐给更多人</string>
    <string name="myinfor">我的快递信息</string>
    <string name="nopic">没有此图片</string>
    <string name="share">分享朋友圈</string>
    <string name="sharetofri">发送给好友</string>
    <string name="sharefail">分享朋友圈失败</string>
    <string name="copy">已复制到粘贴板</string>
    <string name="longclick">长按文本复制到粘贴板</string>
    <string name="tips">提示</string>
    <string name="know">知道了</string>
    <string name="support">支持一下</string>
    <string name="noWX">您还没有安装微信</string>
</resources>
